--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
 
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Insta Stories Clone App made with Parcel Packaging"
     />
 
     <link rel="icon" type="image/x-icon" href="./instagram.png" />
